# metadata_converter

./: .gitignore  .gitingnore  LICENSE.txt  design_consideration.md  pyproject.toml  test.ipynb
examples/: config.toml  config_article.toml  config_datahub.toml  config_dataset.toml
plugins/: add_funding_info.py  combine_month_year_rows.py
scripts/: executer.py  validator.py
src/: transform_helpers.py
src/metadata_converter/: additional_cleaners.py  cleaning_plugin.py  config.py  configuration.py  dummy.csv  dummy_mapping.toml  exporter.py  extract.py  load.py  main.py  mapping.toml  parse.py  reader.py  sample_handling.py  schema_org_models.py  schema_org_registry.py  transform.py
src/metadata_converter/schema_org_models/: check_schemaorg_models.py  custom_models.py  schema_org_model_generator.py  schemaorg_models.py
tests/sample_handling/: BiosamplesMappingAction.jsonld  BiosamplesMappingProduct.jsonld
tests/schema/: test_schemas.py
