[project]
name = "metadata-converter"
version = "0.1.0"
description = "This converter will help you create linked metadata as json-ld files from a flat input."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.11.0",
    "nanoid>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[project.scripts]
converter = "metadata_converter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 88
